apply plugin: "java"
apply plugin: "groovy"
apply plugin: "idea"

version = "1.0"
description = "Advent of Code 2019"

// Spock works with Java 1.7 and above
sourceCompatibility = 11

repositories {
  mavenCentral()
}

dependencies {

  compile "org.apache.commons:commons-collections4:4.4"

  // mandatory dependencies for using Spock
  compile "org.codehaus.groovy:groovy-all:2.5.8"
  testCompile "org.spockframework:spock-core:1.3-RC1-groovy-2.5"

  // optional dependencies for using Spock
  testCompile "org.hamcrest:hamcrest-core:2.2" // only necessary if Hamcrest matchers are used
  testRuntime "net.bytebuddy:byte-buddy:1.9.3"          // allows mocking of classes (in addition to interfaces)
  testRuntime "org.objenesis:objenesis:3.1"    // allows mocking of classes without default constructor (together with CGLIB)

}

test {
  testLogging {
    exceptionFormat = 'full'
    events = ["passed", "failed", "skipped"]
  }
}